fix: minor spacing issue

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -574,7 +574,7 @@ input.list-header-checkbox {
 						}
 					}
 					.mobile-layout:not(.mobile-layout ~ .mobile-layout) {
-						padding-left: 30px;
+						padding-left: 27px;
 						margin-right: 6px;
 
 						&::after {
